NXP-24371: Remove apache commons deprecated usages